k8s/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archie-deployment
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: archie-app
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
