k8s/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archie-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "archie-prod-ip"
    networking.gke.io/managed-certificates: "archie-prod-ssl-cert"
spec:
  tls:
  - hosts:
    - prod.34.120.176.88.nip.io
  rules:
  - host: prod.34.120.176.88.nip.io
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: archie-service
            port:
              number: 80
